# spanright-calibrate

./: .env.localdev  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.css  App.tsx  main.ts  spanrightUrl.ts  types.ts
src-tauri/: Cargo.toml  build.rs  spanright-calibration.json  tauri.conf.json  tauri.local.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/calibration/: flow.rs  mod.rs  overlay.rs
src-tauri/src/export/: mod.rs
src-tauri/src/monitors/: discovery.rs  edid.rs  mod.rs  models.rs
src/components/: AboutDialog.tsx  CalibrationPanel.tsx  ExportPanel.tsx  MonitorLayoutMap.tsx  MonitorList.tsx  PhysicalLayoutMap.tsx  SettingsDialog.tsx  StatusBar.tsx
src/hooks/: useTauriCommands.ts
