[package]
name = "hello-tauri"
version = "0.1.0"
description = "A minimal Tauri app"
edition = "2021"
rust-version = "1.70"

[lib]
name = "hello_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [] }
