[package]
name = "spanright-calibrate"
version = "0.1.1"
description = "Monitor calibration companion for Spanright"
edition = "2021"

[lib]
name = "spanright_calibrate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Registry",
]
